Fix contrast issues with text color on emphasis background (#1040)
* Fix contrast issues with text color on emphasis background

* Add --emphasis-text var to legacy themes

--- a/src/wwwroot/css/themes/gravity_blue.css
+++ b/src/wwwroot/css/themes/gravity_blue.css
@@ -6,6 +6,7 @@
     --background-danger: #200b0b;
     --shadow: #404080;
     --emphasis: #c7966b;
+    --emphasis-text: #101010;
     --light-border: #728787;
     --red: #ff0000;
     --green: #00ff00;
